--- a/views/index.erb
+++ b/views/index.erb
@@ -1,30 +1,52 @@
- <!doctype HTML>
+<!DOCTYPE html>
 <html>
-  <head>  <title> Squacoon Sighting Report Form </title>
-  <link rel = "stylesheet" type = "text/css"  href= "css/style.css">
-  
-  </head>
-  
-  <body>
-  <h2>  Squacoon Sighting Report Form </h2>
-  <form method = "post">
-    <label for "name"> Name </label> <input type = "text" name = "name">
-   <br>
-    <label for "contact"> Contact </label>
-    <input type = "email" name = "contact">
-    <br>
-    <label for "date"> Date </label> <br> <input type = "date" name = "date">
-    <br>
-    <label for "emotion"> Emotional Response </label><br>
-    <select name = "emotion">
-      <option class = "label" value = "panic"> Panic </option>
-      <option class = "label" value = "cute" > Awww </option>
-      <option class = "label"i value = "Noble"> Awed Respect </otpion>
-    </select>
-  <br>
-    <input type = "submit" value = "Submit">
-    
-  </form>
-  <img width = "250" height = "180" src = "http://bekat.yolasite.com/resources/squacoon.JPG.opt378x275o0,0s378x275.JPG"
-  > </body>
+<div id="header">
+<head>
+ <meta charset="UTF-8">
+  <link rel = "stylesheet" type = "text/css" href ="css/style.css">
+  <title>YEETPLAY</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <img src="images/eelplaylogo!!!.png" alt = Eelplay height="150" width="300">
+</head>
+  <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">EEL PLAY</a>
+    </div>
+    <div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Eelhome</a></li>
+        <li><a href="#">Rock/Garage Rock</a></li>
+        <li><a href="#">Alternative</a></li>
+        <li><a href="#">Rap/Hip Hop</a></li>
+        <li><a href="#">Electronic and New Wave</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+  </div>
+  <body background = "images/background.png">
+<br>
+   <h1>  </h1>
+<ul style="list-style-type:disc">
+   <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.google.com" > this is google </a> </li>
+   <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Electronic/New Wave </li>
+   <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Garage Rock </li>
+</ul>
+<!--   <h2><center> Eelpick's up and </center> </h2>
+ <p1> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; paragraph of music </p1>
+<br>
+<!--image here of artist  -->
+<!--<br>
+<p3> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; First artist paragraph </p3>
+<br>
+<!-- image
+<br>
+<p4> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Second  </p4> -->
+
+</body>
 </html>
