--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <div id="header">
@@ -12,7 +13,7 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <img src="images/eelplaylogo!!!.png" alt = Eelplay height="150" width="300">
 </head>
-  <nav class="navbar navbar-default">
+ <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">EEL PLAY</a>
@@ -31,12 +32,13 @@
   </div>
   <body background = "images/background.png">
 <br>
-   <h1>  </h1>
-<ul style="list-style-type:disc">
-   <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.google.com" > this is google </a> </li>
+
+<!--     <h1> <font style="futura"> <font color="blue"> <strong> Red </strong> </font> </font> </h1> -->
+<!-- <ul style="list-style-type:disc">
+   <li> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://www.google.com" >  </a> </li>
    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Electronic/New Wave </li>
    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Garage Rock </li>
-</ul>
+</ul> -->
 <!--   <h2><center> Eelpick's up and </center> </h2>
  <p1> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; paragraph of music </p1>
 <br>
@@ -47,6 +49,14 @@
 <!-- image
 <br>
 <p4> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Second  </p4> -->
-
+<!-- <div id="section">
+  <h4> ME </h4>
+  <p>MEME</p>
+</div> -->
+   <form>
+    Desired Genre:<br>
+  <input type="text" name="genre">
+  <br>
+</form>
 </body>
 </html>
