--- a/views/respond.erb
+++ b/views/respond.erb
@@ -1,6 +1,6 @@
 <!doctype HTML>
 <html>
-  <head> <title> Squacoon Respohsne Form </title> </head>
+  <head> <title> Genre </title> </head>
   <body>
     <h2> Squacoon Response Page </h2>
 
